Fix dashboard scrollbar styles and remove margins for the registration page

--- a/frontend/app/(public)/(portal)/registration/page.module.css
+++ b/frontend/app/(public)/(portal)/registration/page.module.css
@@ -9,7 +9,6 @@
     width: 85%;
     min-width: 7.5rem;
     max-width: 30rem;
-    margin-bottom: 2rem;
 
     display: grid;
     grid-auto-flow: row;
