--- a/frontend/components/ProtectedLayout/ProtectedLayout.module.css
+++ b/frontend/components/ProtectedLayout/ProtectedLayout.module.css
@@ -32,8 +32,6 @@
 
 .content-container {
     overflow: auto;
-    scrollbar-width: thin;
-    scrollbar-gutter: stable both-edges;
 }
 .content-container::-webkit-scrollbar {
     width: 10px;
